# animehub

./: .env.sample  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  uvicorn_logging.yml
app/: main.py
app/api/: api.py
app/api/endpoints/: anime.py  auth.py  health.py  user.py  watchlist.py
app/api/endpoints/schemes/: anime.py  health.py  token.py  user.py  watchlist.py
app/api/endpoints/utils/: di_deps.py  jwt.py  oauth.py  refresh_request_form.py
app/core/: config.py  exceptions.py  security.py
app/database/: database.py  orm.py  redis.py
app/database/repositories/: anime_repository.py  user_repository.py
app/database/uow/: sql_uow.py
app/entity/: anime.py  user.py  watchlist.py
app/interface/repository/: anime_repository.py  base_repository.py  exception.py  user_repository.py
app/interface/uow/: base_uow.py
app/service/: anime.py  user.py
migrations/: env.py
migrations/versions/: 2024_11_19_1916-1c27cafc5859_initial.py  2025_01_30_1723-4a07c3f452b0_user_unique_login.py
nginx/: Dockerfile  nginx.conf
tests/: conftest.py  in_memory_deps.py  test_anime_service.py  test_hasher.py  test_jwt.py  test_user_service.py
tests/db/: test_anime_repository.py  test_user_repository.py
tests/fixtures/: db_session_fixtures.py
