[tool.poetry]
name = "anihub"
version = "0.1.0"
description = ""
authors = ["sny <127958265+kyofu95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
alembic-postgresql-enum = "^1.3.0"
pyjwt = "^2.8.0"
argon2-cffi = "^23.1.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
fastapi-pagination = "^0.12.34"
asgi-correlation-id = "4.3.0"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
mypy = "^1.10.1"
aiosqlite = "^0.20.0"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_return_any = true
exclude = [
    "tests"
]
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ALL",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    #### modules
    "TCH",

    #### specific rules
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D212", # multi-line-summary-first-line
    "D404", # docstring-starts-with-this
    "D413", # missing-blank-line-after-last-section
    "EM101", # Exception must not use a string literal, assign to variable first
    "PGH003", # Ruff and mypy, Use specific rule codes when ignoring type issues
    "TRY003", # Avoid specifying long messages outside the exception class
    "UP017" # datetime-timezone-utc
]